# snooty-create-redirects

./: .gitignore  buckets.yml  consolidate_redirects.py  convert_redirects_to_netlify.py  create_redirects.py  generate_netlify_redirects.py  list_redirects.py  pyproject.toml  scrape_s3_redirects.py  sort_redirects.py  test_redirects.py
netlify-scripts/: compare_redirects_to_pageviews.py  consolidate_across_versions.py  consolidate_redirects.py  convert_redirects_to_netlify.py  csv_to_toml.py  generate_eol_redirects.py  generate_netlify_redirects.py  handle_redirect_chains.py  outlier_redirects.csv  output.txt  scrape_s3_redirects.py  sort_redirects.py  test_redirects.py  utils.py
netlify-scripts/resources/: s3_buckets.json
redirects/: DOP-5072.txt  DOP-5073.txt  DOP-5098.txt  atlas-cli-master.txt  bi-connector-master.txt  docs-k8s-operator-master.txt  kafka-connector-master.txt  manual-v2.2-v2.6.txt  manual-v3.0.txt  mongocli-master.txt  mongocli.txt  mongoid.txt  ops-manager-master.txt  ops-manager-part2.txt  ops-manager.txt  php-library.txt  ruby.txt  spark-connector.txt
scraped-redirects/: docs-mongodb-org-dotcomprd-redirects.txt
