[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'

[tool.poetry]
name = 'convert_redirects'
version = '0.0.1.dev'
description = ''
authors = ['Andrew Aldridge <i80and@foxquill.com>']
package-mode = false

[tool.poetry.dependencies]
python = '>=3.8,<4.0'
boto3 = '1.34.144'
requests = '2.32.3'

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
types-requests = '^2.31.0'
black = "^24.2.2"
boto3-stubs = "^1.34.146"
